# ai_tool_lib

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.py
examples/: test.py
src/ai_tool_lib/: __about__.py  __init__.py
src/ai_tool_lib/bot/: message.py  results.py  session.py
src/ai_tool_lib/bot/client/: __init__.py  base.py  openai.py
src/ai_tool_lib/bot/tool/: base_tool.py  basic_tool.py  handler.py  property.py  response.py  simple_tool.py
src/ai_tool_lib/error/: bot.py  tool.py  user_friendly.py
src/ai_tool_lib/utils/: openai.py  uuid.py
tests/: __init__.py  test_simple_bot_call.py
