[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-lib"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Nathan Ogden", email = "nathan@ogden.tech" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pydantic",
  "openai"
]

[project.urls]
Documentation = "https://github.com/chompy/ai-lib#readme"
Issues = "https://github.com/chompy/ai-lib/issues"
Source = "https://github.com/chompy/ai-lib"

[tool.hatch.version]
path = "src/ai_tool_lib/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/ai_tool_lib tests}"

[tool.coverage.run]
source_pkgs = ["ai_tool_lib", "tests"]
branch = true
parallel = true
omit = [
  "src/ai_tool_lib/__about__.py",
]

[tool.coverage.paths]
ai_tool_lib = ["src/ai_tool_lib", "*/ai-lib/src/ai_tool_lib"]
tests = ["tests", "*/ai-lib/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.ruff.lint.extend-per-file-ignores]
"examples/*" = ["ALL"]